// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Select renders Filter correctly and calls callback on change 1`] = `
<StyledSelectFilter
  boxAs="input"
  className=""
  onChange={
    [MockFunction] {
      "calls": Array [
        Array [
          Object {
            "target": Object {
              "value": "filter",
            },
          },
        ],
      ],
      "results": Array [
        Object {
          "type": "return",
          "value": undefined,
        },
      ],
    }
  }
  style={Object {}}
/>
`;

exports[`Select renders Option correctly and calls callback on click 1`] = `
<StyledSelectOption
  className=""
  onClick={
    [MockFunction] {
      "calls": Array [
        Array [],
      ],
      "results": Array [
        Object {
          "type": "return",
          "value": undefined,
        },
      ],
    }
  }
  style={Object {}}
  value="1"
>
  Option1
</StyledSelectOption>
`;

exports[`Select renders Select correctly 1`] = `
<StyledSelect
  className=""
  onChange={[MockFunction]}
  style={Object {}}
>
  <SelectContainer
    className=""
    key="0/.0"
    onClick={[Function]}
    style={Object {}}
  >
    <SelectPlaceholder
      className=""
      key="0/.0"
      style={Object {}}
    >
      Select an option
    </SelectPlaceholder>
    <SelectIcon
      className=""
      key="2/.2"
      onClick={[Function]}
      style={Object {}}
    >
      keyboard_arrow_down
    </SelectIcon>
  </SelectContainer>
</StyledSelect>
`;

exports[`Select should be rendered as a multi select if the selected prop is an array 1`] = `
<Select
  className=""
  dataLabel="select"
  onChange={[MockFunction]}
  selectedValue={
    Array [
      "2",
      "4",
    ]
  }
  showList={true}
  style={Object {}}
>
  <StyledSelect
    className=""
    dataLabel="select"
    onChange={[MockFunction]}
    selectedValue={
      Array [
        "2",
        "4",
      ]
    }
    showList={true}
    style={Object {}}
  >
    <Box
      className="sc-hKFyIo QfUzd"
      dataLabel="select"
      onChange={[MockFunction]}
      selectedValue={
        Array [
          "2",
          "4",
        ]
      }
      showList={true}
      style={Object {}}
    >
      <Component
        className="sc-hKFyIo QfUzd"
        dataLabel="select"
        onChange={[MockFunction]}
        selectedValue={
          Array [
            "2",
            "4",
          ]
        }
        showList={true}
        style={Object {}}
        theme={
          Object {
            "disabledBackground": "#e2e2e2",
            "disabledfont": "#9d9d9d",
            "inputBackground": "#ffffff",
            "inputBorder": "#e2e2e2",
            "inputFont": "#9d9d9d",
            "label": "#2d2d2d",
            "primary": "#3fbaca",
            "secondary": "#293346",
          }
        }
      >
        <StyledBox
          className="sc-hKFyIo QfUzd"
          dataLabel="select"
          onChange={[MockFunction]}
          selectedValue={
            Array [
              "2",
              "4",
            ]
          }
          showList={true}
          style={Object {}}
          theme={
            Object {
              "disabledBackground": "#e2e2e2",
              "disabledfont": "#9d9d9d",
              "inputBackground": "#ffffff",
              "inputBorder": "#e2e2e2",
              "inputFont": "#9d9d9d",
              "label": "#2d2d2d",
              "primary": "#3fbaca",
              "secondary": "#293346",
            }
          }
        >
          <div
            className="sc-bdnylx dOPKTt sc-hKFyIo QfUzd"
            onChange={[MockFunction]}
            style={Object {}}
          >
            <SelectContainer
              className=""
              key="0/.0"
              onClick={[Function]}
              style={Object {}}
            >
              <StyledSelectContainer
                className=""
                onClick={[Function]}
                style={Object {}}
              >
                <Box
                  className="sc-jSFkmK czzkMK"
                  onClick={[Function]}
                  style={Object {}}
                >
                  <Component
                    className="sc-jSFkmK czzkMK"
                    onClick={[Function]}
                    style={Object {}}
                    theme={
                      Object {
                        "disabledBackground": "#e2e2e2",
                        "disabledfont": "#9d9d9d",
                        "inputBackground": "#ffffff",
                        "inputBorder": "#e2e2e2",
                        "inputFont": "#9d9d9d",
                        "label": "#2d2d2d",
                        "primary": "#3fbaca",
                        "secondary": "#293346",
                      }
                    }
                  >
                    <StyledBox
                      className="sc-jSFkmK czzkMK"
                      onClick={[Function]}
                      style={Object {}}
                      theme={
                        Object {
                          "disabledBackground": "#e2e2e2",
                          "disabledfont": "#9d9d9d",
                          "inputBackground": "#ffffff",
                          "inputBorder": "#e2e2e2",
                          "inputFont": "#9d9d9d",
                          "label": "#2d2d2d",
                          "primary": "#3fbaca",
                          "secondary": "#293346",
                        }
                      }
                    >
                      <div
                        className="sc-bdnylx dOPKTt sc-jSFkmK czzkMK"
                        onClick={[Function]}
                        style={Object {}}
                      >
                        <SelectFilter
                          className=""
                          key="1/.1"
                          onChange={[Function]}
                          onClick={[Function]}
                          style={Object {}}
                        >
                          <StyledSelectFilter
                            boxAs="input"
                            className=""
                            onChange={[Function]}
                            onClick={[Function]}
                            style={Object {}}
                          >
                            <Box
                              boxAs="input"
                              className="sc-eCApGN dHiqAA"
                              onChange={[Function]}
                              onClick={[Function]}
                              style={Object {}}
                            >
                              <Component
                                boxAs="input"
                                className="sc-eCApGN dHiqAA"
                                onChange={[Function]}
                                onClick={[Function]}
                                style={Object {}}
                                theme={
                                  Object {
                                    "disabledBackground": "#e2e2e2",
                                    "disabledfont": "#9d9d9d",
                                    "inputBackground": "#ffffff",
                                    "inputBorder": "#e2e2e2",
                                    "inputFont": "#9d9d9d",
                                    "label": "#2d2d2d",
                                    "primary": "#3fbaca",
                                    "secondary": "#293346",
                                  }
                                }
                              >
                                <StyledBox
                                  as="input"
                                  boxAs="input"
                                  className="sc-eCApGN dHiqAA"
                                  onChange={[Function]}
                                  onClick={[Function]}
                                  style={Object {}}
                                  theme={
                                    Object {
                                      "disabledBackground": "#e2e2e2",
                                      "disabledfont": "#9d9d9d",
                                      "inputBackground": "#ffffff",
                                      "inputBorder": "#e2e2e2",
                                      "inputFont": "#9d9d9d",
                                      "label": "#2d2d2d",
                                      "primary": "#3fbaca",
                                      "secondary": "#293346",
                                    }
                                  }
                                >
                                  <input
                                    className="sc-bdnylx dOPKTt sc-eCApGN dHiqAA"
                                    onChange={[Function]}
                                    onClick={[Function]}
                                    style={Object {}}
                                  />
                                </StyledBox>
                              </Component>
                            </Box>
                          </StyledSelectFilter>
                        </SelectFilter>
                        <SelectIcon
                          className=""
                          key="2/.2"
                          onClick={[Function]}
                          style={Object {}}
                        >
                          <StyledSelectIcon
                            className=""
                            onClick={[Function]}
                            style={Object {}}
                          >
                            <Box
                              className="sc-jrsJCI gAmfKy"
                              onClick={[Function]}
                              style={Object {}}
                            >
                              <Component
                                className="sc-jrsJCI gAmfKy"
                                onClick={[Function]}
                                style={Object {}}
                                theme={
                                  Object {
                                    "disabledBackground": "#e2e2e2",
                                    "disabledfont": "#9d9d9d",
                                    "inputBackground": "#ffffff",
                                    "inputBorder": "#e2e2e2",
                                    "inputFont": "#9d9d9d",
                                    "label": "#2d2d2d",
                                    "primary": "#3fbaca",
                                    "secondary": "#293346",
                                  }
                                }
                              >
                                <StyledBox
                                  className="sc-jrsJCI gAmfKy"
                                  onClick={[Function]}
                                  style={Object {}}
                                  theme={
                                    Object {
                                      "disabledBackground": "#e2e2e2",
                                      "disabledfont": "#9d9d9d",
                                      "inputBackground": "#ffffff",
                                      "inputBorder": "#e2e2e2",
                                      "inputFont": "#9d9d9d",
                                      "label": "#2d2d2d",
                                      "primary": "#3fbaca",
                                      "secondary": "#293346",
                                    }
                                  }
                                >
                                  <div
                                    className="sc-bdnylx dOPKTt sc-jrsJCI gAmfKy"
                                    onClick={[Function]}
                                    style={Object {}}
                                  >
                                    keyboard_arrow_up
                                  </div>
                                </StyledBox>
                              </Component>
                            </Box>
                          </StyledSelectIcon>
                        </SelectIcon>
                      </div>
                    </StyledBox>
                  </Component>
                </Box>
              </StyledSelectContainer>
            </SelectContainer>
            <SelectOptionList
              className=""
              key="1/.1"
              style={Object {}}
            >
              <StyledSelectOptionList
                boxShadow="base"
                className=""
                round="xs"
                style={Object {}}
              >
                <Box
                  boxShadow="base"
                  className="sc-iCoHVE fMmqMx"
                  round="xs"
                  style={Object {}}
                >
                  <Component
                    boxShadow="base"
                    className="sc-iCoHVE fMmqMx"
                    round="xs"
                    style={Object {}}
                    theme={
                      Object {
                        "disabledBackground": "#e2e2e2",
                        "disabledfont": "#9d9d9d",
                        "inputBackground": "#ffffff",
                        "inputBorder": "#e2e2e2",
                        "inputFont": "#9d9d9d",
                        "label": "#2d2d2d",
                        "primary": "#3fbaca",
                        "secondary": "#293346",
                      }
                    }
                  >
                    <StyledBox
                      boxShadow="base"
                      className="sc-iCoHVE fMmqMx"
                      round="xs"
                      style={Object {}}
                      theme={
                        Object {
                          "disabledBackground": "#e2e2e2",
                          "disabledfont": "#9d9d9d",
                          "inputBackground": "#ffffff",
                          "inputBorder": "#e2e2e2",
                          "inputFont": "#9d9d9d",
                          "label": "#2d2d2d",
                          "primary": "#3fbaca",
                          "secondary": "#293346",
                        }
                      }
                    >
                      <div
                        className="sc-bdnylx dMmcRJ sc-iCoHVE fMmqMx"
                        style={Object {}}
                      >
                        <SelectOption
                          className=""
                          key="0/.0"
                          onClick={[Function]}
                          style={Object {}}
                          value="1"
                        >
                          <StyledSelectOption
                            className=""
                            onClick={[Function]}
                            style={Object {}}
                            value="1"
                          >
                            <Box
                              className="sc-pNWxx jTuiHS"
                              onClick={[Function]}
                              style={Object {}}
                              value="1"
                            >
                              <Component
                                className="sc-pNWxx jTuiHS"
                                onClick={[Function]}
                                style={Object {}}
                                theme={
                                  Object {
                                    "disabledBackground": "#e2e2e2",
                                    "disabledfont": "#9d9d9d",
                                    "inputBackground": "#ffffff",
                                    "inputBorder": "#e2e2e2",
                                    "inputFont": "#9d9d9d",
                                    "label": "#2d2d2d",
                                    "primary": "#3fbaca",
                                    "secondary": "#293346",
                                  }
                                }
                                value="1"
                              >
                                <StyledBox
                                  className="sc-pNWxx jTuiHS"
                                  onClick={[Function]}
                                  style={Object {}}
                                  theme={
                                    Object {
                                      "disabledBackground": "#e2e2e2",
                                      "disabledfont": "#9d9d9d",
                                      "inputBackground": "#ffffff",
                                      "inputBorder": "#e2e2e2",
                                      "inputFont": "#9d9d9d",
                                      "label": "#2d2d2d",
                                      "primary": "#3fbaca",
                                      "secondary": "#293346",
                                    }
                                  }
                                  value="1"
                                >
                                  <div
                                    className="sc-bdnylx dOPKTt sc-pNWxx jTuiHS"
                                    onClick={[Function]}
                                    style={Object {}}
                                    value="1"
                                  >
                                    Option 1
                                  </div>
                                </StyledBox>
                              </Component>
                            </Box>
                          </StyledSelectOption>
                        </SelectOption>
                        <SelectOption
                          className=""
                          key="1/.1"
                          onClick={[Function]}
                          style={Object {}}
                          value="2"
                        >
                          <StyledSelectOption
                            className=""
                            onClick={[Function]}
                            style={Object {}}
                            value="2"
                          >
                            <Box
                              className="sc-pNWxx jTuiHS"
                              onClick={[Function]}
                              style={Object {}}
                              value="2"
                            >
                              <Component
                                className="sc-pNWxx jTuiHS"
                                onClick={[Function]}
                                style={Object {}}
                                theme={
                                  Object {
                                    "disabledBackground": "#e2e2e2",
                                    "disabledfont": "#9d9d9d",
                                    "inputBackground": "#ffffff",
                                    "inputBorder": "#e2e2e2",
                                    "inputFont": "#9d9d9d",
                                    "label": "#2d2d2d",
                                    "primary": "#3fbaca",
                                    "secondary": "#293346",
                                  }
                                }
                                value="2"
                              >
                                <StyledBox
                                  className="sc-pNWxx jTuiHS"
                                  onClick={[Function]}
                                  style={Object {}}
                                  theme={
                                    Object {
                                      "disabledBackground": "#e2e2e2",
                                      "disabledfont": "#9d9d9d",
                                      "inputBackground": "#ffffff",
                                      "inputBorder": "#e2e2e2",
                                      "inputFont": "#9d9d9d",
                                      "label": "#2d2d2d",
                                      "primary": "#3fbaca",
                                      "secondary": "#293346",
                                    }
                                  }
                                  value="2"
                                >
                                  <div
                                    className="sc-bdnylx dOPKTt sc-pNWxx jTuiHS"
                                    onClick={[Function]}
                                    style={Object {}}
                                    value="2"
                                  >
                                    Option 2
                                    <SelectIcon
                                      className=""
                                      fontSize={15}
                                      p="0"
                                      style={Object {}}
                                    >
                                      <StyledSelectIcon
                                        className=""
                                        fontSize={15}
                                        p="0"
                                        style={Object {}}
                                      >
                                        <Box
                                          className="sc-jrsJCI gAmfKy"
                                          fontSize={15}
                                          p="0"
                                          style={Object {}}
                                        >
                                          <Component
                                            className="sc-jrsJCI gAmfKy"
                                            fontSize={15}
                                            p="0"
                                            style={Object {}}
                                            theme={
                                              Object {
                                                "disabledBackground": "#e2e2e2",
                                                "disabledfont": "#9d9d9d",
                                                "inputBackground": "#ffffff",
                                                "inputBorder": "#e2e2e2",
                                                "inputFont": "#9d9d9d",
                                                "label": "#2d2d2d",
                                                "primary": "#3fbaca",
                                                "secondary": "#293346",
                                              }
                                            }
                                          >
                                            <StyledBox
                                              className="sc-jrsJCI gAmfKy"
                                              fontSize={15}
                                              p="0"
                                              style={Object {}}
                                              theme={
                                                Object {
                                                  "disabledBackground": "#e2e2e2",
                                                  "disabledfont": "#9d9d9d",
                                                  "inputBackground": "#ffffff",
                                                  "inputBorder": "#e2e2e2",
                                                  "inputFont": "#9d9d9d",
                                                  "label": "#2d2d2d",
                                                  "primary": "#3fbaca",
                                                  "secondary": "#293346",
                                                }
                                              }
                                            >
                                              <div
                                                className="sc-bdnylx ditJkZ sc-jrsJCI gAmfKy"
                                                fontSize={15}
                                                style={Object {}}
                                              >
                                                check
                                              </div>
                                            </StyledBox>
                                          </Component>
                                        </Box>
                                      </StyledSelectIcon>
                                    </SelectIcon>
                                  </div>
                                </StyledBox>
                              </Component>
                            </Box>
                          </StyledSelectOption>
                        </SelectOption>
                        <SelectOption
                          className=""
                          key="2/.2"
                          onClick={[Function]}
                          style={Object {}}
                          value="3"
                        >
                          <StyledSelectOption
                            className=""
                            onClick={[Function]}
                            style={Object {}}
                            value="3"
                          >
                            <Box
                              className="sc-pNWxx jTuiHS"
                              onClick={[Function]}
                              style={Object {}}
                              value="3"
                            >
                              <Component
                                className="sc-pNWxx jTuiHS"
                                onClick={[Function]}
                                style={Object {}}
                                theme={
                                  Object {
                                    "disabledBackground": "#e2e2e2",
                                    "disabledfont": "#9d9d9d",
                                    "inputBackground": "#ffffff",
                                    "inputBorder": "#e2e2e2",
                                    "inputFont": "#9d9d9d",
                                    "label": "#2d2d2d",
                                    "primary": "#3fbaca",
                                    "secondary": "#293346",
                                  }
                                }
                                value="3"
                              >
                                <StyledBox
                                  className="sc-pNWxx jTuiHS"
                                  onClick={[Function]}
                                  style={Object {}}
                                  theme={
                                    Object {
                                      "disabledBackground": "#e2e2e2",
                                      "disabledfont": "#9d9d9d",
                                      "inputBackground": "#ffffff",
                                      "inputBorder": "#e2e2e2",
                                      "inputFont": "#9d9d9d",
                                      "label": "#2d2d2d",
                                      "primary": "#3fbaca",
                                      "secondary": "#293346",
                                    }
                                  }
                                  value="3"
                                >
                                  <div
                                    className="sc-bdnylx dOPKTt sc-pNWxx jTuiHS"
                                    onClick={[Function]}
                                    style={Object {}}
                                    value="3"
                                  >
                                    Option 3
                                  </div>
                                </StyledBox>
                              </Component>
                            </Box>
                          </StyledSelectOption>
                        </SelectOption>
                        <SelectOption
                          className=""
                          key="3/.3"
                          onClick={[Function]}
                          style={Object {}}
                          value="4"
                        >
                          <StyledSelectOption
                            className=""
                            onClick={[Function]}
                            style={Object {}}
                            value="4"
                          >
                            <Box
                              className="sc-pNWxx jTuiHS"
                              onClick={[Function]}
                              style={Object {}}
                              value="4"
                            >
                              <Component
                                className="sc-pNWxx jTuiHS"
                                onClick={[Function]}
                                style={Object {}}
                                theme={
                                  Object {
                                    "disabledBackground": "#e2e2e2",
                                    "disabledfont": "#9d9d9d",
                                    "inputBackground": "#ffffff",
                                    "inputBorder": "#e2e2e2",
                                    "inputFont": "#9d9d9d",
                                    "label": "#2d2d2d",
                                    "primary": "#3fbaca",
                                    "secondary": "#293346",
                                  }
                                }
                                value="4"
                              >
                                <StyledBox
                                  className="sc-pNWxx jTuiHS"
                                  onClick={[Function]}
                                  style={Object {}}
                                  theme={
                                    Object {
                                      "disabledBackground": "#e2e2e2",
                                      "disabledfont": "#9d9d9d",
                                      "inputBackground": "#ffffff",
                                      "inputBorder": "#e2e2e2",
                                      "inputFont": "#9d9d9d",
                                      "label": "#2d2d2d",
                                      "primary": "#3fbaca",
                                      "secondary": "#293346",
                                    }
                                  }
                                  value="4"
                                >
                                  <div
                                    className="sc-bdnylx dOPKTt sc-pNWxx jTuiHS"
                                    onClick={[Function]}
                                    style={Object {}}
                                    value="4"
                                  >
                                    Option 4
                                    <SelectIcon
                                      className=""
                                      fontSize={15}
                                      p="0"
                                      style={Object {}}
                                    >
                                      <StyledSelectIcon
                                        className=""
                                        fontSize={15}
                                        p="0"
                                        style={Object {}}
                                      >
                                        <Box
                                          className="sc-jrsJCI gAmfKy"
                                          fontSize={15}
                                          p="0"
                                          style={Object {}}
                                        >
                                          <Component
                                            className="sc-jrsJCI gAmfKy"
                                            fontSize={15}
                                            p="0"
                                            style={Object {}}
                                            theme={
                                              Object {
                                                "disabledBackground": "#e2e2e2",
                                                "disabledfont": "#9d9d9d",
                                                "inputBackground": "#ffffff",
                                                "inputBorder": "#e2e2e2",
                                                "inputFont": "#9d9d9d",
                                                "label": "#2d2d2d",
                                                "primary": "#3fbaca",
                                                "secondary": "#293346",
                                              }
                                            }
                                          >
                                            <StyledBox
                                              className="sc-jrsJCI gAmfKy"
                                              fontSize={15}
                                              p="0"
                                              style={Object {}}
                                              theme={
                                                Object {
                                                  "disabledBackground": "#e2e2e2",
                                                  "disabledfont": "#9d9d9d",
                                                  "inputBackground": "#ffffff",
                                                  "inputBorder": "#e2e2e2",
                                                  "inputFont": "#9d9d9d",
                                                  "label": "#2d2d2d",
                                                  "primary": "#3fbaca",
                                                  "secondary": "#293346",
                                                }
                                              }
                                            >
                                              <div
                                                className="sc-bdnylx ditJkZ sc-jrsJCI gAmfKy"
                                                fontSize={15}
                                                style={Object {}}
                                              >
                                                check
                                              </div>
                                            </StyledBox>
                                          </Component>
                                        </Box>
                                      </StyledSelectIcon>
                                    </SelectIcon>
                                  </div>
                                </StyledBox>
                              </Component>
                            </Box>
                          </StyledSelectOption>
                        </SelectOption>
                        <SelectOption
                          className=""
                          key="4/.4"
                          onClick={[Function]}
                          style={Object {}}
                          value="5"
                        >
                          <StyledSelectOption
                            className=""
                            onClick={[Function]}
                            style={Object {}}
                            value="5"
                          >
                            <Box
                              className="sc-pNWxx jTuiHS"
                              onClick={[Function]}
                              style={Object {}}
                              value="5"
                            >
                              <Component
                                className="sc-pNWxx jTuiHS"
                                onClick={[Function]}
                                style={Object {}}
                                theme={
                                  Object {
                                    "disabledBackground": "#e2e2e2",
                                    "disabledfont": "#9d9d9d",
                                    "inputBackground": "#ffffff",
                                    "inputBorder": "#e2e2e2",
                                    "inputFont": "#9d9d9d",
                                    "label": "#2d2d2d",
                                    "primary": "#3fbaca",
                                    "secondary": "#293346",
                                  }
                                }
                                value="5"
                              >
                                <StyledBox
                                  className="sc-pNWxx jTuiHS"
                                  onClick={[Function]}
                                  style={Object {}}
                                  theme={
                                    Object {
                                      "disabledBackground": "#e2e2e2",
                                      "disabledfont": "#9d9d9d",
                                      "inputBackground": "#ffffff",
                                      "inputBorder": "#e2e2e2",
                                      "inputFont": "#9d9d9d",
                                      "label": "#2d2d2d",
                                      "primary": "#3fbaca",
                                      "secondary": "#293346",
                                    }
                                  }
                                  value="5"
                                >
                                  <div
                                    className="sc-bdnylx dOPKTt sc-pNWxx jTuiHS"
                                    onClick={[Function]}
                                    style={Object {}}
                                    value="5"
                                  >
                                    Option 5
                                  </div>
                                </StyledBox>
                              </Component>
                            </Box>
                          </StyledSelectOption>
                        </SelectOption>
                      </div>
                    </StyledBox>
                  </Component>
                </Box>
              </StyledSelectOptionList>
            </SelectOptionList>
            <SelectOverlay
              className=""
              key="2/.2"
              onClick={[Function]}
              style={Object {}}
            >
              <StyledSelectOverlay
                className=""
                onClick={[Function]}
                style={Object {}}
              >
                <Box
                  className="sc-fujyUd eULePn"
                  onClick={[Function]}
                  style={Object {}}
                >
                  <Component
                    className="sc-fujyUd eULePn"
                    onClick={[Function]}
                    style={Object {}}
                    theme={
                      Object {
                        "disabledBackground": "#e2e2e2",
                        "disabledfont": "#9d9d9d",
                        "inputBackground": "#ffffff",
                        "inputBorder": "#e2e2e2",
                        "inputFont": "#9d9d9d",
                        "label": "#2d2d2d",
                        "primary": "#3fbaca",
                        "secondary": "#293346",
                      }
                    }
                  >
                    <StyledBox
                      className="sc-fujyUd eULePn"
                      onClick={[Function]}
                      style={Object {}}
                      theme={
                        Object {
                          "disabledBackground": "#e2e2e2",
                          "disabledfont": "#9d9d9d",
                          "inputBackground": "#ffffff",
                          "inputBorder": "#e2e2e2",
                          "inputFont": "#9d9d9d",
                          "label": "#2d2d2d",
                          "primary": "#3fbaca",
                          "secondary": "#293346",
                        }
                      }
                    >
                      <div
                        className="sc-bdnylx dOPKTt sc-fujyUd eULePn"
                        onClick={[Function]}
                        style={Object {}}
                      />
                    </StyledBox>
                  </Component>
                </Box>
              </StyledSelectOverlay>
            </SelectOverlay>
          </div>
        </StyledBox>
      </Component>
    </Box>
  </StyledSelect>
</Select>
`;
